# perf-oriented-dev

./: .gitignore  bench_config_example.json  bench_config_lcc3.json  bench_config_local.json  benchmark.py  collect.txt  gprof_analyzer.py  io_bench_config_lcc3.json  io_bench_config_local.json  io_results.csv  io_results.vars.csv  job.sh  jobgprof_local.sh  lcc3_cpu.csv  lcc3_cpu.vars.csv  lcc3_io.csv  lcc3_io.vars.csv  o2.txt  parse_bench_log.py  parse_bench_logs.py  performance_comparison.md  plot_results_optimization_flags.py  profile_a.txt  profile_b.txt  profile_b_local.txt  results.csv  results.vars.csv  results_O1.csv  results_O2.csv  results_O3.csv  results_fgcse_after_reload.csv  results_fipa_cp_clone.csv  results_fsplit_loops.csv  results_ftree_partial_pre.csv  results_funswitch_loops.csv  results_fvect_cost_model=dynamic.csv  results_fversion_loops_for_strides.csv  test.csv
configs/: bench_config_local.json  io_bench_config_lcc3.json
ex01/: ex01_lcc3.csv  ex01_lcc3_job_output.txt  ex01_lcc3_log.txt  ex01_local.csv  job.sh  job_local.sh  parse_bench_log.py  solution.md
ex02/: solution_task_02.md
ex03/: profile_a_lcc3_1.txt  profile_a_lcc3_2.txt  profile_a_lcc3_3.txt  profile_a_lcc3_4.txt  profile_a_lcc3_5.txt  profile_b_lcc3_1.txt  profile_b_lcc3_2.txt  profile_b_lcc3_3.txt  profile_b_lcc3_4.txt  (+1 more)
ex09/: CMakeLists.txt  Makefile  container.cpp  container.hpp  container_benchmark.cpp  lcc3.md  lcc3_384537.txt  local.md  local.txt  node.hpp  operations.cpp  run_lcc3.sh  run_local.sh
ex11/: CMakeLists.txt  delannoy_memoized.c  run_lcc3.sh  run_local.sh
(+48 files in other folders)
